<resources>
    <string name="app_name">Score Keeper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deuce">40</string>
    <string name="advantage">AD</string>
    <string name="zero">0</string>
    <string name="player_b">PLAYER B</string>
    <string name="player_a">PLAYER A</string>
    <string name="player_b2">Player B:</string>
    <string name="player_a2">Player A:</string>
    <string name="ball">ball</string>
    <string name="tennis">Tennis</string>
    <string name="tennis_logo">Tennis Logo</string>
    <string name="spikeball">Spikeball</string>
    <string name="spikeball_logo">Spikeball Logo</string>
    <string name="federer">Federer</string>
    <string name="nadal">Nadal</string>
    <string name="serve">Serve</string>
    <string name="start">Start</string>
    <string name="_21">21</string>
    <string name="sets">Sets</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_5">5</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start2">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">Please enter your name</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">SETS</string>
    <string name="slide_3_desc">Please select the number of sets</string>
    <string name="slide_4_title">SERVE</string>
    <string name="slide_4_desc">Select the first player to serve</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="btn_next">btn_next</string>
    <string name="_1_set">1 SET</string>
    <string name="_3_sets">3 SETS</string>
    <string name="_5_sets">5 SETS</string>
    <string name="face_player">face_player</string>
    <string name="tennis_ball">tennis_ball</string>
    <string name="tennis_racket">tennis_racket</string>

    <string name="text_sign_in">Sign in</string>
    <string name="text_sign_in_subtitle">Selamat datang, \nsilahkan masuk untuk melanjutkan</string>
    <string name="text_hint_email_field">Email</string>
    <string name="text_hint_password_field">Password</string>
    <string name="text_btn_forgot_password">Forgot password?</string>
    <string name="text_btn_sign_in">Sign in</string>
    <string name="text_or">or</string>
    <string name="text_not_have_an_account">No account? <b><font color='#3A405A'>Create one!</font></b></string>
    <string name="text_sign_up_subtitle">Selamat datang, \nbergabunglah bersama kami</string>
    <string name="text_sign_up_title">Daftar</string>
    <string name="text_hint_confirm_password_field">Konfirmasi kata sandi</string>
    <string name="text_privacy_and_policy">Dengan mendaftar Anda berarti menyetujui\n<b><font color='#039BE5'>Kebijakan</font></b> dan <b><font color='#039BE5'>Privasi</font></b></string>
    <string name="text_btn_sign_up">Daftar</string>
    <string name="text_have_an_account">Sudah memiliki akun? <b><font color='#039BE5'>Masuk</font></b></string>

    <string name="btn_google_text">Continue with Google</string>
    <string name="btn_facebook_text">Continue with Facebook</string>
    <string name="btn_guest_text">Continue as guest</string>

    <string name="web_client_id" translatable="false">342968672101-fo8ao2470rvq4cvrmms564m61pl4nvjp.apps.googleusercontent.com</string>

    <string name="facebook_app_id">924067894784140</string>
    <string name="fb_login_protocol_scheme">fb924067894784140</string>
    <string name="continue_btn">Continue</string>
    <string name="win">WIN</string>

    <string name="supporting_text">Please select one of the options</string>
    <string name="new_match">New match</string>
    <string name="stats">Stats</string>
    <string name="exit">Exit</string>
</resources>