<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen4"
    android:gravity="center"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/img_width_height"
        android:layout_height="@dimen/img_width_height"
        android:src="@drawable/round_sports_tennis_white_48"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/tennis_racket" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_4_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold"
        android:fontFamily="@font/nunito_sans_bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="36dp"
        android:paddingLeft="@dimen/desc_padding"
        android:paddingRight="@dimen/desc_padding"
        android:text="@string/slide_4_desc"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_desc"
        android:fontFamily="@font/nunito_sans_reguler"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:gravity="center">

        <ToggleButton
            android:id="@+id/btnA"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/toggle_selector_serve_a"
            android:textColor="@color/toggle_text"
            android:textOn="@string/player_a"
            android:textOff="@string/player_a"
            android:fontFamily="@font/nunito_sans_reguler"/>

        <ToggleButton
            android:id="@+id/btnB"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:background="@drawable/toggle_selector_serve_b"
            android:textColor="@color/toggle_text"
            android:textOn="@string/player_b"
            android:textOff="@string/player_b"
            android:fontFamily="@font/nunito_sans_reguler"/>

    </LinearLayout>
</LinearLayout>