<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen2"
    android:gravity="center"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:src="@drawable/round_face_white_48"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/face_player" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_b"
            android:textColor="@color/colorB"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/slide_1_desc"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />

        <EditText
            android:id="@+id/nameB"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/colorB"
            android:hint="@string/nadal"
            android:text=""
            android:singleLine="true"
            android:maxLength="15"
            android:gravity="center_horizontal"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/colorText"
            android:textColorHint="@android:color/darker_gray"
            android:autofillHints="" />
</LinearLayout>