<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutLogos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ToggleButton
            android:id="@+id/logoTennis"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:background="@drawable/toggle_selector"
            android:contentDescription="@string/tennis_logo"
            android:drawableTop="@drawable/ic_round_sports_tennis_30"
            android:textOff=""
            android:textOn=""
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/logoSpike"
            />

        <TextView
            android:id="@+id/textTennis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tennis"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/logoTennis"
            app:layout_constraintStart_toStartOf="@id/logoTennis"
            app:layout_constraintEnd_toEndOf="@id/logoTennis"/>

        <ToggleButton
            android:id="@+id/logoSpike"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:padding="10dp"
            android:background="@drawable/toggle_selector"
            android:textOff=""
            android:textOn=""
            android:drawableTop="@drawable/ic_baseline_sports_handball_40"
            android:contentDescription="@string/spikeball_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/logoTennis"
            app:layout_constraintRight_toRightOf="parent"
            />

        <TextView
            android:id="@+id/textSpike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/spikeball"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/logoSpike"
            app:layout_constraintStart_toStartOf="@id/logoSpike"
            app:layout_constraintEnd_toEndOf="@id/logoSpike"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playersLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutLogos">

        <TextView
            android:id="@+id/titleA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/player_a2"
            android:textColor="@color/colorA"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/nameA"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameA"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="48dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorText"
            android:hint="@string/federer"
            android:inputType="text"
            android:maxLength="15"
            android:maxLines="1"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/titleA"
            app:layout_constraintLeft_toRightOf="@id/titleA"
            app:layout_constraintTop_toTopOf="@id/titleA" />

        <TextView
            android:id="@+id/titleB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/player_b2"
            android:textColor="@color/colorB"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameA" />

        <EditText
            android:id="@+id/nameB"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="48dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorText"
            android:hint="@string/nadal"
            android:inputType="text"
            android:maxLength="15"
            android:maxLines="1"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/titleB"
            app:layout_constraintLeft_toRightOf="@id/titleB"
            app:layout_constraintTop_toTopOf="@id/titleB" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/nameB"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@id/nameA"
            app:layout_constraintTop_toTopOf="@id/nameA">

            <RadioButton
                android:id="@+id/radioButtonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:buttonTint="@color/colorA" />

            <TextView
                android:id="@+id/serve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/serve"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/radioButtonB"
                app:layout_constraintTop_toBottomOf="@id/radioButtonA" />

            <RadioButton
                android:id="@+id/radioButtonB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:buttonTint="@color/colorB" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/radioGroupSets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleB">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="45dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sets"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio1Set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:buttonTint="@color/colorText"
                android:text="@string/_1"
                android:textColor="@color/colorText" />

            <RadioButton
                android:id="@+id/radio3Set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:buttonTint="@color/colorText"
                android:checked="true"
                android:text="@string/_3"
                android:textColor="@color/colorText" />

            <RadioButton
                android:id="@+id/radio5Set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorText"
                android:text="@string/_5"
                android:textColor="@color/colorText" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start"
        android:layout_margin="24dp"
        android:src="@drawable/ic_round_sports_baseball_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>