<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainMenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="60dp">

                <ToggleButton
                    android:id="@+id/logoTennis"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/toggle_background"
                    android:contentDescription="@string/tennis_logo"
                    android:drawableTop="@drawable/ic_baseline_sports_tennis_24"
                    android:textOff=""
                    android:textOn="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="132dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/tennis"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <ToggleButton
                    android:id="@+id/logoSpike"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="16dp"
                    android:padding="10dp"
                    android:background="@drawable/toggle_background"
                    android:textOff=""
                    android:textOn=""
                    android:drawableTop="@drawable/ic_baseline_sports_handball_40"
                    android:contentDescription="@string/spikeball_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="132dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/spikeball"
                    android:textColor="@color/colorText"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/player_a2"
                android:textColor="@color/colorA"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nameA"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:backgroundTint="@color/colorText"
                android:hint="@string/federer"
                android:text=""
                android:maxLines="1"
                android:maxLength="15"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textAlignment="center"
                android:textColorHint="@android:color/darker_gray"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/player_b2"
                android:textColor="@color/colorB"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nameB"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:backgroundTint="@color/colorText"
                android:hint="@string/nadal"
                android:text=""
                android:maxLines="1"
                android:inputType="text"
                android:maxLength="15"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textColorHint="@android:color/darker_gray"
                android:autofillHints="" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/serve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serve"
                android:textColor="@color/colorText"
                android:textSize="14sp" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButtonA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:buttonTint="@color/colorA" />

                <RadioButton
                    android:id="@+id/radioButtonB"
                    android:layout_marginTop="36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorB" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/start"
            app:backgroundTint="@color/colorText"
            android:backgroundTint="@color/colorBackground"
            app:srcCompat="@drawable/ic_baseline_sports_baseball_30" />

    </LinearLayout>
</ScrollView>